--- a/css/04-flexbox/example-07/index.html
+++ b/css/04-flexbox/example-07/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Flexbox #07</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="flex-container">
-  <div class="one"></div>
-  <div class="two"></div>
-  <div class="three"></div>
-</div>
-<!-- partial -->
-  
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Flexbox #07</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="flex-container">
+      <div class="one"></div>
+      <div class="two"></div>
+      <div class="three"></div>
+      <!--       <div class="one">one</div>
+      <div class="two">two</div>
+      <div class="three">three</div> -->
+    </div>
+  </body>
 </html>
