--- a/javascript/07-recursion/example-07.html
+++ b/javascript/07-recursion/example-07.html
@@ -1,10 +1,18 @@
 <html>
   <head>
     <script>
-      console.log('Hello!');
+      console.log('hi');
     </script>
   </head>
   <body>
-    Hello world!
+    <ul>
+      <li><b>Home</b></li>
+      <li>Blog</li>
+      <li>About</li>
+    </ul>
+    <div>
+      <h1>My Blog</h1>
+      <p>Welcome to my blog!</p>
+    </div>
   </body>
 </html>
